<resources>
    <string name="app_name">App Market</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Switch">Switch</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>

    <string name="first_name_text_hint">Фамилия</string>
    <string name="last_name_text_hint">Имя</string>
    <string name="middle_name_text_hint">Отчетсво</string>
    <string name="username_text_hint">Имя пользователя</string>
    <string name="password_text_hint">Пароль</string>
    <string name="authenticate_button_hint">Войти</string>
    <string name="registration_button_hint">Регистрация</string>
</resources>